5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1595_2895.log
== TEST (2019-03-28 16:21:45) 
-- CODE:
jogos=int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total jogos * preco_jogos + frete

print (total)
-- ERROR:
File "XXXX", line 5
    total jogos * preco_jogos + frete
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:03) 
-- CODE:
jogos =int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total=jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:06) 
-- CODE:
jogos =int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total=jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:13) 
-- CODE:
jogos =int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total=jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:17) 
-- CODE:
jogos =int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total=jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total=jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:22:38) 
-- CODE:
jogos =int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total=jogos * preco_jogos + frete

print (total)
-- EXECUTION TIME:
0.142662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total=jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:47) 
-- CODE:
jogos =int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total= jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total= jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:56) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total = jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:23:04) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("frete:"))

total = jogos * preco_jogos + frete

print (total)
-- EXECUTION TIME:
0.132688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total = jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:23:21) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("Frete:"))

total = jogos * preco_jogos + frete

print (total)
-- EXECUTION TIME:
0.182812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total = jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:23:22) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("Frete:"))

total = jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:23:41) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("Frete:"))

total = jogos * preco_jogos + frete

print (total)
-- EXECUTION TIME:
0.184778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total = jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:24:30) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("Frete:"))

total = jogos * preco_jogos + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogos * preco_jogos + frete
NameError: name 'preco_jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:25:03) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("Frete:"))

total = jogos * preco_jogo + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogos * preco_jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:25:07) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("Frete:"))

total = jogos * preco_jogo + frete

print (total)
-- EXECUTION TIME:
0.167479
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 5, in <module>
    total = jogos * preco_jogo + frete
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:25:23) 
-- CODE:
jogos = int(input("Quantidade jogos:"))
preco_jogo = float(input("preco jogo"))
Frete = float(input("Frete:"))

total = jogos * preco_jogo + frete

print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = jogos * preco_jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:56:23) 
-- CODE:
quantidade = int(input("quantidade:"))
print(quantidade)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:22:15) 
-- CODE:
quantidade = int(input("quantidade"))
valor = float(input("valor"))
frete = float(input("frete"))

valor total = print

-- ERROR:
File "XXXX", line 5
    valor total = print
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:23:47) 
-- CODE:
quantidade = int(input("quantidade"))
valor = float(input("valor"))
frete = float(input("frete"))
print(quantidade)
print(valor)
print(frete)
valor total = print(quantidade*valor+frete)

-- ERROR:
File "XXXX", line 7
    valor total = print(quantidade*valor+frete)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:23:53) 
-- CODE:
quantidade = int(input("quantidade"))
valor = float(input("valor"))
frete = float(input("frete"))
print(quantidade)
print(valor)
print(frete)

-- OUTPUT:
12
45.0
78.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:27:42) 
-- CODE:
quantidade = int(input("quantidade"))
valor = float(input("valor"))
frete = float(input("frete"))
print(input("quantidade"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:28:15) 
-- CODE:
quantidade = int(input("quantidade"))
valor = float(input("valor"))
frete = float(input("frete"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:29:07) 
-- CODE:
quantidade = int(input("quantidade"))
valor = float(input("valor"))
frete = float(input("frete"))

valor_total= print(quantidade*valor+frete)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:29:49) 
-- CODE:
quantidade = int(input("quantidade"))
valor = float(input("valor"))
frete = float(input("frete"))

valor_total= print(quantidade*valor+frete)
-- EXECUTION TIME:
0.215228
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
